--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "PORT=3030 react-scripts start",
+    "start":"react-scripts start",
+    "iniciarLin": "PORT=3030 npm start",
+    "iniciarWin": "set PORT=3030 && npm start",
     "limpar": "npm cache clean --force",
     "build": "react-scripts build",
     "test": "react-scripts test",
